[gd_scene load_steps=7 format=3 uid="uid://cf3qim0f4lqs2"]

[ext_resource type="Script" uid="uid://kmaqaaujijkp" path="res://Code/Menus/options_window.gd" id="1_71h2b"]
[ext_resource type="Texture2D" uid="uid://bby3bciial160" path="res://Sprites/window/window_fat.png" id="1_o6jfv"]
[ext_resource type="Texture2D" uid="uid://c3infx8b60r7t" path="res://Sprites/window/Xbutton.png" id="2_71h2b"]
[ext_resource type="FontFile" uid="uid://dbdf54m58r8v6" path="res://Resources/at01.ttf" id="3_ck1yo"]
[ext_resource type="Theme" uid="uid://couwr1of1iw53" path="res://Resources/uitheme.tres" id="4_gjyir"]
[ext_resource type="Script" uid="uid://833dv56w5ncp" path="res://Code/Menus/options/vol_slider.gd" id="8_erkls"]

[node name="options_window" type="Node2D"]
script = ExtResource("1_71h2b")

[node name="grabBtn" type="Button" parent="."]
offset_left = -123.0
offset_top = -8.0
offset_right = 133.0
offset_bottom = 8.0

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -123.0
offset_top = -8.0
offset_right = 389.0
offset_bottom = 392.0
grow_horizontal = 2
scale = Vector2(0.5, 0.5)
size_flags_vertical = 0
texture = ExtResource("1_o6jfv")
region_rect = Rect2(0, 0, 96, 96)
patch_margin_left = 16
patch_margin_top = 36
patch_margin_right = 16
patch_margin_bottom = 16

[node name="close_button" type="Control" parent="NinePatchRect"]
z_index = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/close_button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -24.0
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_71h2b")

[node name="closeBtn" type="Button" parent="NinePatchRect/close_button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -16.0
offset_top = -12.0
offset_right = 32.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 16
flat = true

[node name="saveBtn" type="Button" parent="NinePatchRect"]
layout_mode = 0
offset_left = 32.0
offset_top = 314.0
offset_right = 480.0
offset_bottom = 368.0
theme = ExtResource("4_gjyir")
text = "BUTTON_SAVE"

[node name="ScrollContainer" type="ScrollContainer" parent="NinePatchRect"]
clip_contents = false
layout_mode = 0
offset_left = 112.0
offset_top = 40.0
offset_right = 400.0
offset_bottom = 288.0

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Language" type="HBoxContainer" parent="NinePatchRect/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/ScrollContainer/VBoxContainer/Language"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ck1yo")
theme_override_font_sizes/font_size = 32
text = "TEXT_MENU_LANG"

[node name="langOpt" type="OptionButton" parent="NinePatchRect/ScrollContainer/VBoxContainer/Language"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_gjyir")
selected = 0
item_count = 2
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "Espa√±ol"
popup/item_1/id = 1

[node name="Separator" type="HBoxContainer" parent="NinePatchRect/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Volume" type="HBoxContainer" parent="NinePatchRect/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="NinePatchRect/ScrollContainer/VBoxContainer/Volume"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_ck1yo")
theme_override_font_sizes/font_size = 32
text = "TEXT_MENU_VOL"

[node name="volSlider" type="HSlider" parent="NinePatchRect/ScrollContainer/VBoxContainer/Volume"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme = ExtResource("4_gjyir")
max_value = 1.0
step = 0.05
value = 0.5
script = ExtResource("8_erkls")

[node name="Separator2" type="HBoxContainer" parent="NinePatchRect/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Resolution" type="HBoxContainer" parent="NinePatchRect/ScrollContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label2" type="Label" parent="NinePatchRect/ScrollContainer/VBoxContainer/Resolution"]
layout_mode = 2
theme = ExtResource("4_gjyir")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Resolution:  "

[node name="OptionButton" type="OptionButton" parent="NinePatchRect/ScrollContainer/VBoxContainer/Resolution"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_gjyir")
selected = 0
item_count = 4
popup/item_0/text = "1920 x 1080"
popup/item_0/id = 0
popup/item_1/text = "1280 x 720"
popup/item_1/id = 1
popup/item_2/text = "1024 x 768"
popup/item_2/id = 2
popup/item_3/text = "800 x 600"
popup/item_3/id = 3

[node name="Separator3" type="HBoxContainer" parent="NinePatchRect/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Window" type="HBoxContainer" parent="NinePatchRect/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="NinePatchRect/ScrollContainer/VBoxContainer/Window"]
layout_mode = 2
theme = ExtResource("4_gjyir")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "TEXT_MENU_WIN"

[node name="OptionButton2" type="OptionButton" parent="NinePatchRect/ScrollContainer/VBoxContainer/Window"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("4_gjyir")
selected = 0
item_count = 2
popup/item_0/text = "BUTTON_WINDOW"
popup/item_0/id = 0
popup/item_1/text = "BUTTON_FULLSCREEN"
popup/item_1/id = 1

[node name="Label" type="Label" parent="."]
offset_left = -117.0
offset_top = -7.0
offset_right = -77.0
offset_bottom = 16.0
theme_override_fonts/font = ExtResource("3_ck1yo")
theme_override_font_sizes/font_size = 16
text = "BUTTON_OPTIONS"

[node name="Panel" type="Panel" parent="."]
visible = false
offset_left = 16.0
offset_top = 32.0
offset_right = 200.0
offset_bottom = 184.0
theme = ExtResource("4_gjyir")

[connection signal="button_down" from="grabBtn" to="." method="_on_grab_btn_button_down"]
[connection signal="button_up" from="grabBtn" to="." method="_on_grab_btn_button_up"]
[connection signal="pressed" from="NinePatchRect/close_button/closeBtn" to="." method="_on_close_btn_pressed"]
[connection signal="pressed" from="NinePatchRect/saveBtn" to="." method="_on_save_btn_pressed"]
[connection signal="value_changed" from="NinePatchRect/ScrollContainer/VBoxContainer/Volume/volSlider" to="NinePatchRect/ScrollContainer/VBoxContainer/Volume/volSlider" method="_on_value_changed"]
